[package]
name = "ethrpc"
version = "0.0.7"
authors = ["Nicholas Rodrigues Lordello <n@lordello.net>"]
edition = "2021"
description = "Ethereum transport-agnositic JSON RPC implementation"
documentation = "https://docs.rs/ethrpc"
readme = "README.md"
homepage = "https://github.com/nlordell/ethrpc-rs"
repository = "https://github.com/nlordell/ethrpc-rs"
license = "MIT OR Apache-2.0"
keywords = ["json", "rpc", "ethereum"]
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true

[features]
http = ["dep:reqwest"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
ethprim = { version = "0.1", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
ethprim = { version = "0.1", features = ["macros"] }
hex-literal = "0.4"
