[package]
name = "ethrpc"
version = "0.0.7"
authors = ["Nicholas Rodrigues Lordello <n@lordello.net>"]
edition = "2021"
description = "Ethereum transport-agnositic JSON RPC implementation"
documentation = "https://docs.rs/ethrpc"
readme = "README.md"
homepage = "https://github.com/nlordell/ethrpc-rs"
repository = "https://github.com/nlordell/ethrpc-rs"
license = "MIT OR Apache-2.0"
keywords = ["json", "rpc", "ethereum"]
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
all-features = true

[features]
curl = ["dep:curl"]
http = ["dep:futures", "dep:reqwest", "dep:tokio", "dep:tokio-stream"]

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
ethprim = { version = "0.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

curl = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
tokio = { version = "1", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
ethprim = { version = "0.2", features = ["macros"] }
hex-literal = "0.4"

[workspace]
members = ["examples/*"]
